# calkit-cloud

./: .env.example  .env.template  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  LATEX_EDITOR_PLAN.md  LICENSE  Makefile  README.md  deployment.md  development.md  docker-compose.minio.yml  docker-compose.observability.yml  docker-compose.override.yml  docker-compose.traefik.yml  docker-compose.yml
backend/: .gitignore  Dockerfile  Makefile  README.md  prestart.sh  pyproject.toml  tests-start.sh
backend/app/: __init__.py  backend_pre_start.py  client.py  config.py  core.py  crud.py  db.py  dvc.py  git.py  github.py  main.py  messaging.py  mixpanel.py  models.py  orgs.py  pipeline.py  projects.py  security.py  storage.py  stripe.py  subscriptions.py  tests_pre_start.py  users.py  utils.py  zenodo.py  zotero.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 026f9b3efef9_add_release_github_issue_url_and_.py  07c8236476c4_add_fields_to_usertoken.py  10a05eaedfbd_add_dataset_table.py  1546aa334cd5_make_project_description_nullable.py  1fb6e38eb0e9_add_cliauthrequest_table.py  1fb6e38eb0e9_add_deviceauth_table.py  208e7457f3ba_add_title_to_project.py  2e7c25a00842_add_is_public_to_project.py  38e178698db2_update_subscription_model_to_use_plan_.py  3b1e67e9c318_add_usertoken_table.py  (+50 more)
backend/app/api/: deps.py  main.py
backend/app/models/: __init__.py  core.py  projects.py  releases.py
backend/app/tests/: __init__.py  conftest.py  test_client.py  test_core.py  test_db.py  test_dvc.py  test_git.py  test_pipeline.py  test_project_contents_ref.py  test_projects.py  test_users.py
backend/scripts/: backend-pre-start.py  create-initial-data.py  generate-client.py  rotate-fernet-secrets.py  test.sh
frontend/: .env  (+14 more)
(+263 files in other folders)
