[project]
name = "app"
version = "0.1.0"
description = ""
requires-python = ">=3.10,<4.0"
authors = [{ name = "Pete Bachant", email = "petebachant@gmail.com" }]
dependencies = [
  "fastapi[standard]<1.0.0,>=0.114.2",
  "python-multipart<1.0.0,>=0.0.7",
  "email-validator<3.0.0.0,>=2.1.0.post1",
  "passlib[bcrypt]<2.0.0,>=1.7.4",
  "tenacity<9.0.0,>=8.2.3",
  "pydantic>2.0",
  "emails<1.0,>=0.6",
  "jinja2<4.0.0,>=3.1.4",
  "alembic<2.0.0,>=1.12.1",
  "httpx<1.0.0,>=0.25.1",
  "psycopg[binary]<4.0.0,>=3.1.13",
  "sqlmodel<1.0.0,>=0.0.21",
  # Pin bcrypt until passlib supports the latest
  "bcrypt==4.0.1",
  "pydantic-settings<3.0.0,>=2.2.1",
  "sentry-sdk[fastapi]<2.0.0,>=1.40.6",
  "pyjwt<3.0.0,>=2.8.0",
  # Beyond template dependencies
  "s3fs==2024.10.0",
  "python-slugify==8.0.4",
  "cryptography==43.0.0",
  "dvc==3.59.0",
  "gitpython>=3.1.43",
  "ruamel-yaml==0.18.6",
  "bibtexparser==1.4.1",
  "filelock==3.16.0",
  "stripe==10.11.0",
  "mixpanel==4.10.1",
  "gcsfs==2024.10.0",
  "calkit-python>=0.20.3",
]

[dependency-groups]
dev = [
  "pytest<8.0.0,>=7.4.3",
  "mypy<2.0.0,>=1.8.0",
  "ruff<1.0.0,>=0.2.2",
  "pre-commit<4.0.0,>=3.6.2",
  "pytest-test-utils", # For tmp_dir fixture
  "types-passlib<2.0.0.0,>=1.7.7.20240106",
  "coverage<8.0.0,>=7.4.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py312"
line-length = 79
fix = true
exclude = ["alembic"]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
